feat: quiz component

--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,1 +1,17 @@
-<p>quiz works!</p>
+<div class="title">
+  <h1>BeezFeed</h1>
+  <p>{{ title }}</p>
+</div>
+<div *ngIf="!isFinished" class="questions">
+  <h1>{{ selectedQuestion.question }}</h1>
+  <button
+    *ngFor="let option of selectedQuestion.options; index as i"
+    (click)="handleChooseQuestion(option.alias)"
+  >
+    {{ option.name }}
+  </button>
+</div>
+<div *ngIf="isFinished" class="result">
+  <h1>Resultado:</h1>
+  <p>{{ answerSelected }}</p>
+</div>
