--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,17 +1,19 @@
-<div class="title">
-  <h1>BeezFeed</h1>
-  <p>{{ title }}</p>
-</div>
-<div *ngIf="!isFinished" class="questions">
-  <h1>{{ selectedQuestion.question }}</h1>
-  <button
-    *ngFor="let option of selectedQuestion.options; index as i"
-    (click)="handleChooseQuestion(option.alias)"
-  >
-    {{ option.name }}
-  </button>
-</div>
-<div *ngIf="isFinished" class="result">
-  <h1>Resultado:</h1>
-  <p>{{ answerSelected }}</p>
+<div class="container">
+  <div class="title">
+    <h1>BeezFeed</h1>
+    <h2>{{ title }}</h2>
+  </div>
+  <div *ngIf="!isFinished" class="questions">
+    <h1>{{ selectedQuestion.question }}</h1>
+    <button
+      *ngFor="let option of selectedQuestion.options; index as i"
+      (click)="handleChooseQuestion(option.alias)"
+    >
+      {{ option.name }}
+    </button>
+  </div>
+  <div *ngIf="isFinished" class="result">
+    <h1>Resultado:</h1>
+    <p>{{ answerSelected }}</p>
+  </div>
 </div>
