--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,15 @@
 body {
   background-color: rgba(23, 25, 35, 1); /* --blackBackground */
 }
+button {
+  border-radius: 0;
+  line-height: 50px;
+  width: 100%;
+  height: 100px;
+  border: none;
+  outline: none;
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.5);
+}
 /* Utils */
 .content {
   display: flex;
