feat: better styles

--- a/src/app/components/quiz/quiz.component.css
+++ b/src/app/components/quiz/quiz.component.css
@@ -8,9 +8,11 @@
 .questions-options {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .questions-options-button {
-  margin-bottom: 20px;
+  margin-bottom: 3px;
+  font-size: 15px;
 }
 .questions-options-button:hover {
   background-color: green;
