--- a/src/app/components/quiz/quiz.component.css
+++ b/src/app/components/quiz/quiz.component.css
@@ -16,6 +16,8 @@
 }
 .questions-options-button:hover {
   background-color: green;
-  color: white;
   cursor: pointer;
+}
+.result-first-link {
+  margin-top: 50px;
 }
